# ggj21

./: .gitmodules  CMakeLists.txt  README.md  launch_vscode.ps1  setup.ps1
data/scripts/gui/controls/: textbox.lua
data/scripts/gui/scene_gameplay/: root.lua
data/scripts/gui/scene_lobby/: root.lua
data/scripts/gui/scene_mainmenu/: root.lua
data_src/: ninji.kra
ext/soloud/: CMakeLists.txt
media/: surprise.webm
platform/x86_64/data/shaders/: background1.frag  sprite.frag  sprite.vert
src/: background_shader.cpp  background_shader.hpp  channels.hpp  client.cpp  client.hpp  common.hpp  components.hpp  main.cpp  messages.hpp  renderer.cpp  renderer.hpp  scene_gameplay.cpp  scene_gameplay.hpp  scene_lobby.cpp  scene_lobby.hpp  scene_mainmenu.cpp  scene_mainmenu.hpp  server.cpp  server.hpp  server_scene_gameplay.cpp  server_scene_lobby.cpp  sprite_shader.cpp  sprite_shader.hpp
src/ember/: box2d_helpers.hpp  camera.hpp  component_common.hpp  config.hpp  engine.cpp  engine.hpp  engine_constructor.cpp  font.hpp  math.hpp
